--- a/todos/templates/base.html
+++ b/todos/templates/base.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -5,12 +7,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>
+        {% block title %}{% endblock title %}
+    </title>
 </head>
 
 <body>
-    {% block content %}
-    {% endblock content %}
+    {% block content %}{% endblock content %}
 </body>
 
 </html>
